Fix overflow styling

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ header.shadow {
 .nav {
   display: flex;
   gap: 5rem;
+  width: 100%;
 }
 
 .nav a {
@@ -228,6 +229,7 @@ header.shadow {
 .brand {
   height: 60%;
   opacity: 40%;
+  width: auto;
 }
 
 /* PRODUCTS SECTION */
@@ -375,7 +377,7 @@ header.shadow {
 }
 
 .review-text-container {
-  width: 400px;
+  max-width: 400px;
   margin-top: 10px;
 }
 
@@ -675,6 +677,42 @@ header.shadow {
     top: 100%;
   }
 
+  .brand {
+    height: 50%;
+    padding-left: 40px;
+  }
+
+  .about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3%;
+    text-align: center;
+  }
+
+  .about-img-container {
+    padding-bottom: 30px;
+  }
+
+  .about-text-container h2 {
+    padding-bottom: 10px;
+  }
+
+  .brands-container {
+    margin-top: 20px;
+  }
+
+  .about-img-container img {
+    height: 400px;
+    border-radius: 10px;
+    grid-area: a;
+  }
+
+  .products h2,
+  .reviews h2 {
+    margin-bottom: 50px;
+  }
+
   .profile-container img {
     height: 170px;
     width: 170px;
@@ -776,34 +814,6 @@ header.shadow {
   }
 }
 
-@media (max-width: 888px) {
-  .about {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 3%;
-    text-align: center;
-  }
-
-  .about-img-container {
-    padding-bottom: 30px;
-  }
-
-  .about-text-container h2 {
-    padding-bottom: 10px;
-  }
-
-  .brands-container {
-    margin-top: 20px;
-  }
-
-  .about-img-container img {
-    height: 400px;
-    border-radius: 10px;
-    grid-area: a;
-  }
-}
-
 @media (max-width: 689px) {
   .fa-bars,
   .fa-magnifying-glass,
@@ -841,6 +851,10 @@ header.shadow {
     height: 100%;
   }
 
+  .brand {
+    height: 35%;
+  }
+
   .footer-container {
     text-align: center;
   }
@@ -861,6 +875,11 @@ header.shadow {
 }
 
 @media (max-width: 542px) {
+  .brand {
+    height: 28%;
+    padding-left: 10px;
+  }
+
   .products-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -914,5 +933,9 @@ header.shadow {
 
   .about-img-container img {
     height: 250px;
+  }
+  .review-container {
+    width: 300px;
+    padding: 20px;
   }
 }
